# get-auction-list-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: BOOTSTRAP.md  DEPLOYMENT.md  OBSERVABILITY_EVALUATION.md  README.md
docs/decisions/: 0001-python-service-foundations.md
docs/grafana/: get-auction-list-overview.json
scripts/: bootstrap_ingest.py  verify_sample_prompts.py
src/get_auction_list_api/: __init__.py  auth.py  config.py  database.py  dependencies.py  domain.py  errors.py  main.py  middleware.py  repositories.py  runtime.py  schemas.py  security.py  server.py
src/get_auction_list_api/api/: health.py  metrics.py  security.py
src/get_auction_list_api/api/v1/: __init__.py  chat.py  operations.py
src/get_auction_list_api/evaluation/: __init__.py  adapters.py  runner.py
src/get_auction_list_api/graph/: __init__.py  adapters.py  checkpoint.py  context.py  llm.py  state.py  workflow.py
src/get_auction_list_api/ingestion/: __init__.py  auction_rows.py  chunking.py  handler.py  operations.py  path_meta.py  pipeline.py  publisher.py  queue.py  sources.py  storage.py  validation.py  worker.py
src/get_auction_list_api/llm/: __init__.py  embeddings.py  openai.py
src/get_auction_list_api/normalization/: __init__.py  auction.py
src/get_auction_list_api/observability/: __init__.py  langfuse.py  logging.py  telemetry.py
src/get_auction_list_api/parsers/: __init__.py  html.py  models.py  pdf.py  xlsx.py
src/get_auction_list_api/public_records/: __init__.py  cli.py  http.py  mcp.py  models.py  service.py
src/get_auction_list_api/rag/: __init__.py  models.py  repository.py  retrieval.py
src/get_auction_list_api/tools/: __init__.py  auction_search.py
tests/: test_auction_normalization.py  test_auction_search_service.py  test_auth.py  test_config.py  test_domain_repositories.py  test_embeddings.py  test_errors.py  test_feedback_api.py  test_graph_mcp_api.py  test_graph_production_wiring.py  test_graph_workflow.py  test_health.py  test_ingestion_parsers.py  test_ingestion_queue_pipeline.py  test_knowledge_permissions.py  test_logging.py  test_middleware.py  test_migration_invariants.py  test_observability_evaluation_fixtures.py  test_rag.py  test_security.py  test_source_faithful_answers.py
tests/fixtures/: auction_list.xlsx  privacy_disclaimer.html  wcad_property_details.html  wcad_search_results.html
(+1 files in other folders)
